# SkyEchoBridge

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  NMEAData.cpp  NMEAData.h  SkyEcho2  cmake_install.cmake  config.cpp  config.h  fcs.cpp  fcs.h  main.cpp  message_handler.cpp  message_handler.h  outbound_flarm_converter.cpp  outbound_flarm_converter.h  outbound_pipe.cpp  outbound_pipe.h  outbound_pipe_stream_receiver.cpp  outbound_pipe_stream_receiver.h  ownship.cpp  ownship.h  readme.md  serial_port.cpp  serial_port.h  serial_stream_receiver.cpp  serial_stream_receiver.h  socket.cpp  socket.h  state.cpp  state.h  stdout_stream_receiver.cpp  stdout_stream_receiver.h  stream_adapter.cpp  stream_adapter.h  stream_receiver.h  target.cpp  target.h  tracked_target.cpp  (+4 more)
FlarmMerge/: CMakeCache.txt  CMakeLists.txt  FlarmMerge  Makefile  cmake_install.cmake  epoll_adapter.h  flarm_message.cpp  flarm_message.h  flarm_receiver.cpp  flarm_receiver.h  inbound_pipe.cpp  inbound_pipe.h  inbound_pipe_epoll_adapter.cpp  inbound_pipe_epoll_adapter.h  main.cpp  message_merge.cpp  message_merge.h  readme.md  serial_epoll_adapter.cpp  serial_epoll_adapter.h  version.h.in
HC06/: SEBridge_hc06.py  readme.md
TrafficGen/: CMakeCache.txt  CMakeLists.txt  Makefile  clock.h  cmake_install.cmake  config.cpp  config.h  fcs.cpp  fcs.h  frame.cpp  frame.h  head_on.lua  heartbeat_message.cpp  heartbeat_message.h  lua.cpp  lua.h  main.cpp  message.h  ownship_scripting.cpp  ownship_scripting.h  readme.md  scripting.md  simulation.cpp  simulation.h  simulation_scripting.cpp  simulation_scripting.h  socket.cpp  socket.h  swarm.lua  target_message.cpp  target_message.h  test.lua  version.h.in
TrafficGen/Lua/lua-5.4.6/: lua  luac
